
ElasticSearch-Carrot2 Change Log

================ ElasticSearch-Carrot2 1.2.1 ================

Changes in Backwards Compatibility

* GH-4: Compatibility issue with elasticsearch-0.90.10 (this
  release will not work for ES < 0.90.10).

Bug Fixes

* GH-4: Compatibility issue with elasticsearch-0.90.10

================ ElasticSearch-Carrot2 1.2.0 ================

New features

* Added an action to return all available clustering algorithms.

* Added support for search-and-cluster requests using HTTP GET (with a subset
  of all the functionality but still useful).

Bug Fixes

* Proper propagation of ProcessingExceptions from Carrot2 framework (in case
  they happen due to, for example, invalid attribute values).

Other

* Added tests for invalid attribute values and proper responses in such
  case (API, REST).

* Refactoring of API classes (nesting classes under ClusteringAction, similar pattern
  will follow for all future *Action implementations).

* Improved tests (test requests are converted to all XContentTypes).

* Restructured the plugin documentation, added table of contents and 
  sections for each REST API method.

* Minor touches for incompatible ES API changes (removed methods in RestActions).

================ ElasticSearch-Carrot2 1.1.1 ================

Other

* Minor touches for incompatible ES API changes (removed methods in RestActions).

================ ElasticSearch-Carrot2 1.1.0 ================

New features

* The size of the clustering controller's component pool is adjustable using
  the configuration file (controller.pool-size option).  

* Added language field mapping descriptors. This helps with multi-lingual 
  clustering -- hints about each document's language can be stored together
  with the document in the index. See the documentation for examples.

Bug Fixes

* GH-1: Front-page example visualizations fail with Lingo3G.

Other

* Update base ES dependency to 0.90.2
